--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,16 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer utilities {
+  .line-clamp-2 {
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis; /* Ensures that ellipsis is added */
+  }
+}
+
 
 
 @font-face {
@@ -108,4 +118,5 @@ html{
 
 p,h1,h2,h3,h4,h5,h6,input,small,span,button,li,a,input::placeholder,label{
   font-family: "iranYekan" !important;
+  direction: rtl;
 }
